version paulo-120